[package]
name = "hello-collect-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "*", features = ["default", "compress-zstd"] }
reqwest = { version = "*", features = ["default", "cookies", "json"] }
cached = { version = "*", features = ["default", "async", "async_tokio_rt_multi_thread", "tokio"] }
tokio = { version = "*", features = ["default"] }
serde_json = { version = "*", features = ["default"] }
once_cell = { version = "*", features = ["default"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "*", features = ["default"] }