[package]
name = "hello-collect-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.9.0", features = ["default", "compress-zstd"] }
reqwest = { version = "0.12.12", features = ["default", "cookies", "json"] }
cached = { version = "0.54.0", features = ["default", "async", "async_tokio_rt_multi_thread", "tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = { version = "1.0.137", features = ["default"] }
once_cell = { version = "1.20.2", features = ["default"] }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["default"] }
tracing = { version = "0.1.41", features = ["default"] }
tracing-subscriber = { version = "0.3.19", features = ["default", "env-filter"] }
sqlx = { version = "0.8.3", features = ["mysql", "default", "runtime-tokio", "chrono"] }
futures = { version = "0.3.31", features = ["default"] }

[profile.relwithdebinfo]
inherits = "release"
debug = true